# Solar-Floating-cleaning-robot-simulation

./: README.md
model/Sphere/: Sphere.sdf
model/Sphere1/: Sphere1.sdf
model/Sphere2/: Sphere2.sdf
model/Sphere3/: Sphere3.sdf  model.config
model/Sphere4/: Sphere4.sdf
model/Sphere5/: Sphere5.sdf  model.config
model/Sphere6/: Sphere6.sdf
model/Sphere7/: Sphere7.sdf
model/Sphere8/: Sphere8.sdf
model/Sphere9/: Sphere1.sdf
src/: freebuoyancy.cpp
src/lidar_description/: CMakeLists.txt  package.xml
src/lidar_description/config/: example_controllers.yaml
src/lidar_description/launch/: buoyon.launch.py  path.launch.py  robot.launch.py  (+3 more)
src/lidar_gazebo/: CMakeLists.txt  package.xml
src/lidar_gazebo/launch/: gazebo.launch.py  gazebo_2.launch.py  test_world.launch.py
src/lidar_gazebo/model/Sphere/: Sphere.sdf
src/lidar_gazebo/model/Sphere1/: Sphere1.sdf
src/lidar_gazebo/model/Sphere2/: Sphere2.sdf  model.config
src/lidar_gazebo/model/Sphere3/: Sphere3.sdf
src/lidar_gazebo/model/Sphere4/: Sphere4.sdf  model.config
src/lidar_gazebo/model/Sphere5/: Sphere5.sdf
src/lidar_gazebo/model/Sphere6/: Sphere6.sdf  model.config
src/lidar_gazebo/model/Sphere7/: Sphere7.sdf  model.config
src/lidar_gazebo/model/Sphere8/: Sphere8.sdf  model.config
src/lidar_gazebo/model/Sphere9/: Sphere1.sdf  model.config
src/lidar_gazebo/model/path1/: model.config  path1.sdf
src/lidar_gazebo/model/path2/: model.config  path2.sdf
src/lidar_gazebo/model/test/: model.config  test.sdf
src/lidar_gazebo/model/test2/: model.config  test2.sdf
src/lidar_gazebo/scripts/: dummy_script.py
src/lidar_gazebo/src/: cpp_node.cpp
src/lidar_gazebo/worlds/: default.world  freebuoyancy_demo.world
src/solar/: CMakeLists.txt
src/watertest_description/: CMakeLists.txt  package.xml
src/watertest_gazebo/: CMakeLists.txt  package.xml
worlds/: freebuoyancy_demo.world
(+35 files in other folders)
